# cdek

./: .all-contributorsrc  .copier-answers.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml
cdek/: __init__.py  client.py  constants.py
cdek/apps/: __init__.py  app.py  request.py
cdek/apps/agreement/: __init__.py  agreement.py  requests.py  responses.py
cdek/apps/check/: __init__.py  check.py  filters.py  responses.py
cdek/apps/currency/: __init__.py  currency.py
cdek/apps/form/: __init__.py  barcode.py  invoice.py  requests.py  responses.py
cdek/apps/intake/: filters.py  intake.py  requests.py  responses.py
cdek/apps/location/: __init__.py  filters.py  location.py  responses.py
cdek/apps/models/: __init__.py  contact.py  dimensions.py  entity_response.py  error.py  image.py  intakes.py  item.py  location.py  money.py  order.py  package.py  payment_info.py  phone.py  print.py  related_entity.py  request.py  seller.py  status.py  warning.py  work_time.py
cdek/apps/office/: __init__.py  filters.py  office.py  responses.py
cdek/apps/order/: order.py  requests.py  responses.py
cdek/apps/payment/: __init__.py  payment.py  responses.py
cdek/apps/tariff/: requests.py  responses.py  tariff.py
cdek/apps/webhook/: __init__.py  enums.py  requests.py  responses.py  webhook.py
cdek/entity/requests/: agreement.py  check.py  contact.py  delivery_points.py  intakes.py  item.py  location.py  money.py  order.py  package.py  phone.py  seller.py  services.py  source.py  tariff.py  threshold.py  webhooks.py
cdek/entity/responses/: __init__.py  agreement_response.py  calls_response.py  check_response.py  cities_response.py  contact_response.py  delivery_detail_response.py  delivery_points_response.py  entity.py  intakes_response.py  items_response.py  location_response.py  money_response.py  office_image_response.py  order.py  packages_response.py  payment_response.py  phone_response.py  print_response.py  regions_response.py  registry.py  requests_response.py  responses.py  seller_response.py  services_response.py  source.py  statuses_response.py  tariff.py  tariff_list_response.py  threshold_response.py  webhook_list_response.py  work_time_list_response.py
cdek/exceptions/: __init__.py  cdek_auth_exception.py  cdek_exception.py  cdek_request_exception.py
cdek/mixin/: __init__.py  agreement.py  common.py  contact.py  delivery_points.py  express.py  intakes.py  item.py  location.py  money.py  order.py  package.py  phone.py  seller.py  services.py  tariff.py  threshold.py
cdek/requests/: __init__.py  agreement.py  barcode.py  check.py  contact.py  currency_enum.py  delivery_mode.py  delivery_points.py  intakes.py  invoice.py  item.py  location.py  money.py  order.py  package.py  phone.py  seller.py  services.py  source.py  tariff.py  threshold.py  webhooks.py
cdek/responses/: __init__.py  agreement_response.py  calls_response.py  check_response.py  cities_response.py  contact_response.py  delivery_points_response.py  entity.py  intakes_response.py  items_response.py  location_response.py  money_response.py  office_image_response.py  order.py  packages_response.py  payment_response.py  phone_response.py  print_response.py  regions_response.py  registry.py  seller_response.py  services_response.py  source.py  statuses_response.py  tariff.py  tariff_entry.py  tariff_entry_list.py  tariff_list_response.py  threshold_response.py  webhook_list_response.py  work_time_list_response.py
docs/: conf.py  errors.md  examples.md  index.md  installation.md  quickstart.md  usage.md
docs/_static/: custom.css
src/cdek/: __init__.py  client.py  constants.py
src/cdek/apps/: __init__.py  app.py
src/cdek/apps/agreement/: __init__.py  agreement.py  requests.py  responses.py
src/cdek/apps/check/: __init__.py  check.py  filters.py  responses.py
src/cdek/apps/currency/: __init__.py  currency.py
src/cdek/apps/form/: __init__.py  barcode.py  requests.py  responses.py
src/cdek/apps/intake/: __init__.py  filters.py  intake.py  requests.py  responses.py
src/cdek/apps/location/: __init__.py  filters.py  location.py  responses.py
src/cdek/apps/models/: __init__.py  contact.py  entity_response.py  error.py  image.py  intakes.py  location.py  money.py  order.py  package.py  (+8 more)
src/cdek/exceptions/: __init__.py  cdek_auth_exception.py  cdek_exception.py  cdek_request_exception.py
tests/: conftest.py  test_cdek_module.py
tests/apps/: test_app_agreement.py  test_app_barcode.py  test_app_check.py  test_app_currency.py  test_app_intake.py  test_app_invoice.py  test_app_location.py  test_app_office.py  test_app_order.py  test_app_payment.py  test_app_tariff.py  test_app_webhook.py
(+18 files in other folders)
