[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cdek"
version = "2.1.0"
description = "Python SDK для работы с API СДЭК версии 2.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CDEK Python SDK", email = "support@cdek.ru"}
]
maintainers = [
    {name = "CDEK Python SDK", email = "support@cdek.ru"}
]
keywords = ["cdek", "sdk", "api", "delivery", "shipping", "logistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.6,<3.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/xxp-odoo-erp/cdek"
Documentation = "https://github.com/xxp-odoo-erp/cdek/blob/main/README.md"
Repository = "https://github.com/xxp-odoo-erp/cdek"
Issues = "https://github.com/xxp-odoo-erp/cdek/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdek*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100

